Archive/e2ae5651758c5b4d543d999c16d6a7b1-0f11904895a20602a6e5ca9f4b5b0039/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:17:40: error: ‘bar’ was not declared in this scope
     std::cout << "Flags add up to " << bar.count << "\n";
                                        ^
